before arrange folder and structure

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,35 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32doit-devkit-v1]
+[env:main]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
+upload_port = COM4  ; Thay đổi COM4 thành port thực tế của bạn
+; Build main project
+build_src_filter = 
+    -<*>
+    +<main.cpp>
+    +<**/*.cpp>
+    -<**/*_example.cpp>
+lib_deps =
+    adafruit/Adafruit BME280 Library
+    adafruit/Adafruit Unified Sensor
+    Wire
+
+[env:test_receiver]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+upload_port = COM4  ; Thay đổi COM4 thành port thực tế của bạn
+; Build receiver test
+build_src_filter = 
+    -<*>
+    +<receiver/receiver_example.cpp>
+    +<receiver/IBusReceiver.cpp>
+lib_deps =
+    adafruit/Adafruit BME280 Library
+    adafruit/Adafruit Unified Sensor
+    Wire
