add debug by python and webinterface

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,8 @@ lib_deps =
     adafruit/Adafruit BME280 Library
     adafruit/Adafruit Unified Sensor
     Wire
+    links2004/WebSockets @ ^2.4.1
+    bblanchon/ArduinoJson @ ^6.21.3
 
 [env:test_receiver]
 platform = espressif32
